# Capstone

./: .env.example  .gitignore  ARCHITECTURE_UPDATE.md  FULL_FILE_TREE.txt  INTEGRATION_GUIDE.md  Methodology_Amendment_March_2026.md  README.md  REFACTORING_CHECKLIST.md  REPO_STRUCTURE.md  changesmarch.readme  docker-compose.yml  pyproject.toml
backend/: requirements.txt
data/: README.md  check_data.py
docs/: ARCHITECTURE.md  CHANGELOG.md  MILESTONES.md  PHYSICS.md  STATIONDATA_GAPFILL_OPTIONS_MATRIX.md  TRAINING_ST_PIGNN.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gnn/: README.md  __init__.py  angular_diffusion.py  edge_weights.py  graph_builder.py  model.py  pi_gnn.py  plume_physics.py  raster_sampler.py  wake_predictor.py
infra/: docker-compose.yml
ingestion/: README.md  bias_correction.py  config.py  data_fusion.py  gee_pipeline.py  ingestor.py  nowcaster.py  physics_plane.py  pull_gnn_training_data.py  redis_publisher.py  traffic_spike.py
matcher/: README.md  commuter_model.py  equilibrium_checker.py  gale_shapley.py  quota_manager.py  route_pool.py  segment_model.py
notebooks/: 01_gnn_v100_training.ipynb  02_gnn_training_workingtrial1.ipynb  03_gnn_training_trial2.ipynb  cluster_gcn_scaling_v1.ipynb
rasterising_demo/: README.md  bangalore.geojson  rasterize_grid.py
router/: README.md  edge_cost.py  inhalation_rates.py  stake_audit.py
rust-router/: Cargo.toml  README.md
scripts/: bootstrap.ps1  build_gapfill_derived_layer.py  build_graph_tensors.py  check_processed_time_format.py  pull_airquality.py  (+10 more)
(+88 files in other folders)
