[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toxicity-nav"
version = "0.1.0"
description = "Real-time urban toxicity-aware routing platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"pydantic>=2.8.0",
	"pydantic-settings>=2.4.0",
	"redis>=5.0.0",
	"numpy>=1.26.0",
	"networkx>=3.3",
	"orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"httpx>=0.27.0",
	"ruff>=0.6.0",
	"mypy>=1.11.0",
]

[tool.setuptools]
packages = ["ingestion", "gnn", "matcher", "router", "shared"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["ingestion/tests", "gnn/tests", "matcher/tests", "router/tests"]

